--- a/src/stylesheets/components/_support-form.scss
+++ b/src/stylesheets/components/_support-form.scss
@@ -20,7 +20,6 @@
       width: 100%;
     }
     &:disabled {
-      background-color: $textLight;
       cursor: not-allowed;
     }
   }
